Add email capture form

--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
         <div id="progress"></div>
     </div>
     <script src="quiz.js"></script>
+    <div id="lead-form" style="display:none;">
+  <h3>📩 Get Your Free Financial Report!</h3>
+  <form action="https://formspree.io/f/xrbeklbl" method="POST">
+    <input type="email" name="email" placeholder="Your best email" required>
+    <button type="submit">Send My Report →</button>
+  </form>
+</div>
 </body>
 </html>
